--- a/src/components/layout/home/portfolio/Engineering.scss
+++ b/src/components/layout/home/portfolio/Engineering.scss
@@ -183,6 +183,7 @@
                 font-family: 'Work Sans', serif;
                 font-size: medium;
                 font-weight: 500;
+                width: 100%;
             }
 
             
