--- a/src/components/layout/projects/plant_detection/PlantDetection.scss
+++ b/src/components/layout/projects/plant_detection/PlantDetection.scss
@@ -47,7 +47,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem 0rem;
+    padding: 1.5rem 0rem;
 
     .content_title{
         padding: 0rem 1rem;
@@ -87,13 +87,13 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 3rem;
+        margin: 1.5rem;
     }
 
     .content_9{
         display: flex;
         flex-direction: column;
-        margin-top: 3rem;
+        margin: 1.5rem;
     }
 }
 
@@ -132,6 +132,12 @@
     .plant_content{
         img{
             width: 20rem;
+        }
+    }
+
+    .content_2{
+        img{
+            width: 22rem;
         }
     }
 }
